# scarab

./: .gitignore  LICENSE  README.md  compiler.py  main.py  parser.py  pyproject.toml
.github/workflows/: test.yml
src/scarab/: __init__.py  compiler.py  lexer.py  parser.py  value.py  vm.py
tests/: test_compiler.py  test_lexer.py  test_parser.py  test_value.py  test_vm.py
