[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "scarab"
authors = [{ name = "Alex Overstreet" }]
dynamic = ["version", "description"]
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.optional-dependencies]
test = [
    "pytest>=6.0"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]